cmake_minimum_required(VERSION 2.6)
project(stdiotelnetd)
set(CMAKE_C_FLAGS "-DRINGBUF_CAPACITY=512U -DMAX_CONN=7U")
include(/usr/lib64/cmake/libtelnet/libtelnet.cmake)
get_target_property(LIBTELNET_INCDIR libtelnet INTERFACE_INCLUDE_DIRECTORIES)
include_directories(${LIBTELNET_INCDIR})
add_executable(stdiotelnetd main.c)
add_library(connection connection.c)
add_library(rawtty rawtty.c)
add_library(ringbuf ringbuf.c)
add_library(server server.c)
add_library(spawn spawn.c)
add_library(telnetd telnetd.c)
target_link_libraries(stdiotelnetd rawtty spawn server connection telnetd ringbuf libtelnet)
